{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 29,
  "lineage": "41c7c734-f60f-6936-41df-b246629ecbb8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-sason-terraform-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091ce504696aa473d",
            "domain": "vpc",
            "id": "eipalloc-091ce504696aa473d",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-52-196-111-203.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.196.111.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-sason-terraform-nat"
            },
            "tags_all": {
              "Name": "eip-sason-terraform-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-sason-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:internet-gateway/igw-00cc4490c150b9f25",
            "id": "igw-00cc4490c150b9f25",
            "owner_id": "261001581880",
            "tags": {
              "Name": "ig-sason-terraform"
            },
            "tags_all": {
              "Name": "ig-sason-terraform"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-sason-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091ce504696aa473d",
            "connectivity_type": "public",
            "id": "nat-095de14d5bf2c13aa",
            "network_interface_id": "eni-075fda96520dc0313",
            "private_ip": "10.0.0.25",
            "public_ip": "52.196.111.203",
            "subnet_id": "subnet-00133f315f477923d"
          },
          "dependencies": [
            "aws_eip.eip-sason-terraform-nat",
            "aws_subnet.sbn-sason-terraform-pub-01",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rt-sason-terraform-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08b8acda54ee649891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-095de14d5bf2c13aa",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b8acda54ee64989",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-sason-terraform-nat",
            "aws_nat_gateway.nat-sason-terraform",
            "aws_route_table.rt-sason-terraform-pri",
            "aws_subnet.sbn-sason-terraform-pub-01",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rt-sason-terraform-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00cc4490c150b9f25",
            "id": "r-rtb-0a94b6bf4effb13651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a94b6bf4effb1365",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig-sason-terraform",
            "aws_route_table.rt-sason-terraform-pub",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-sason-terraform-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:route-table/rtb-08b8acda54ee64989",
            "id": "rtb-08b8acda54ee64989",
            "owner_id": "261001581880",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-sason-terraform-pri"
            },
            "tags_all": {
              "Name": "rt-sason-terraform-pri"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-sason-terraform-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:route-table/rtb-0a94b6bf4effb1365",
            "id": "rtb-0a94b6bf4effb1365",
            "owner_id": "261001581880",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-sason-terraform-pub"
            },
            "tags_all": {
              "Name": "rt-sason-terraform-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sason-terraform-pri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f335b0a3285872b7",
            "route_table_id": "rtb-08b8acda54ee64989",
            "subnet_id": "subnet-02566912ba5d8b564"
          },
          "dependencies": [
            "aws_route_table.rt-sason-terraform-pri",
            "aws_subnet.sbn-sason-terraform-pri-03",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sason-terraform-pri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0907b24b1eea7b4f5",
            "route_table_id": "rtb-08b8acda54ee64989",
            "subnet_id": "subnet-0accaeff5bdb7b901"
          },
          "dependencies": [
            "aws_route_table.rt-sason-terraform-pri",
            "aws_subnet.sbn-sason-terraform-pri-04",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sason-terraform-pri3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00abc6bfa73f7f988",
            "route_table_id": "rtb-08b8acda54ee64989",
            "subnet_id": "subnet-0b85a59d7b0994465"
          },
          "dependencies": [
            "aws_route_table.rt-sason-terraform-pri",
            "aws_subnet.sbn-sason-terraform-pri-05",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sason-terraform-pri4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026d9adbd8ab29fc7",
            "route_table_id": "rtb-08b8acda54ee64989",
            "subnet_id": "subnet-0eafd03999bc09d5d"
          },
          "dependencies": [
            "aws_route_table.rt-sason-terraform-pri",
            "aws_subnet.sbn-sason-terraform-pri-06",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sason-terraform-pri5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a70a661b57ca75b",
            "route_table_id": "rtb-08b8acda54ee64989",
            "subnet_id": "subnet-08458095332fa09cb"
          },
          "dependencies": [
            "aws_route_table.rt-sason-terraform-pri",
            "aws_subnet.sbn-sason-terraform-pri-07",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sason-terraform-pri6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b65dcb8a3a32952",
            "route_table_id": "rtb-08b8acda54ee64989",
            "subnet_id": "subnet-00d5bd3113de4a236"
          },
          "dependencies": [
            "aws_route_table.rt-sason-terraform-pri",
            "aws_subnet.sbn-sason-terraform-pri-08",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sason-terraform-pri7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005070dad60198193",
            "route_table_id": "rtb-08b8acda54ee64989",
            "subnet_id": "subnet-05d1b6b2dd190c2e3"
          },
          "dependencies": [
            "aws_route_table.rt-sason-terraform-pri",
            "aws_subnet.sbn-sason-terraform-pri-09",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sason-terraform-pri8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5ae605532fce80d",
            "route_table_id": "rtb-08b8acda54ee64989",
            "subnet_id": "subnet-07b7c4f3e47b3cba1"
          },
          "dependencies": [
            "aws_route_table.rt-sason-terraform-pri",
            "aws_subnet.sbn-sason-terraform-pri-10",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sason-terraform-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffcc1a0a61771cf1",
            "route_table_id": "rtb-0a94b6bf4effb1365",
            "subnet_id": "subnet-00133f315f477923d"
          },
          "dependencies": [
            "aws_route_table.rt-sason-terraform-pub",
            "aws_subnet.sbn-sason-terraform-pub-01",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-sason-terraform-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c0129be49224102",
            "route_table_id": "rtb-0a94b6bf4effb1365",
            "subnet_id": "subnet-0041aa1bdba73a78e"
          },
          "dependencies": [
            "aws_route_table.rt-sason-terraform-pub",
            "aws_subnet.sbn-sason-terraform-pub-02",
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn-sason-terraform-pri-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:subnet/subnet-02566912ba5d8b564",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02566912ba5d8b564",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261001581880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sbn-sason-terraform-pri-03"
            },
            "tags_all": {
              "Name": "sbn-sason-terraform-pri-03"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn-sason-terraform-pri-04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:subnet/subnet-0accaeff5bdb7b901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.0.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0accaeff5bdb7b901",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261001581880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sbn-sason-terraform-pri-04"
            },
            "tags_all": {
              "Name": "sbn-sason-terraform-pri-04"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn-sason-terraform-pri-05",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:subnet/subnet-0b85a59d7b0994465",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b85a59d7b0994465",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261001581880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sbn-sason-terraform-pri-05"
            },
            "tags_all": {
              "Name": "sbn-sason-terraform-pri-05"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn-sason-terraform-pri-06",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:subnet/subnet-0eafd03999bc09d5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.0.96/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eafd03999bc09d5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261001581880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sbn-sason-terraform-pri-06"
            },
            "tags_all": {
              "Name": "sbn-sason-terraform-pri-06"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn-sason-terraform-pri-07",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:subnet/subnet-08458095332fa09cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.128/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08458095332fa09cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261001581880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sbn-sason-terraform-pri-07"
            },
            "tags_all": {
              "Name": "sbn-sason-terraform-pri-07"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn-sason-terraform-pri-08",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:subnet/subnet-00d5bd3113de4a236",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.0.144/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d5bd3113de4a236",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261001581880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sbn-sason-terraform-pri-08"
            },
            "tags_all": {
              "Name": "sbn-sason-terraform-pri-08"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn-sason-terraform-pri-09",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:subnet/subnet-05d1b6b2dd190c2e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.160/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d1b6b2dd190c2e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261001581880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sbn-sason-terraform-pri-09"
            },
            "tags_all": {
              "Name": "sbn-sason-terraform-pri-09"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn-sason-terraform-pri-10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:subnet/subnet-07b7c4f3e47b3cba1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.0.192/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b7c4f3e47b3cba1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261001581880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sbn-sason-terraform-pri-10"
            },
            "tags_all": {
              "Name": "sbn-sason-terraform-pri-10"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn-sason-terraform-pub-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:subnet/subnet-00133f315f477923d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00133f315f477923d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261001581880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sbn-sason-terraform-pub-01"
            },
            "tags_all": {
              "Name": "sbn-sason-terraform-pub-01"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sbn-sason-terraform-pub-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:subnet/subnet-0041aa1bdba73a78e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0041aa1bdba73a78e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261001581880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sbn-sason-terraform-pub-02"
            },
            "tags_all": {
              "Name": "sbn-sason-terraform-pub-02"
            },
            "vpc_id": "vpc-05d1ac41619ffe90e"
          },
          "dependencies": [
            "aws_vpc.vpc-sason-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-sason-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:261001581880:vpc/vpc-05d1ac41619ffe90e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0f4915e382d25758a",
            "default_route_table_id": "rtb-03ef6e05854cdff80",
            "default_security_group_id": "sg-097351802554ea6ca",
            "dhcp_options_id": "dopt-3b0b185c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05d1ac41619ffe90e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03ef6e05854cdff80",
            "owner_id": "261001581880",
            "tags": {
              "Name": "vpc-sason-terraform"
            },
            "tags_all": {
              "Name": "vpc-sason-terraform"
            }
          }
        }
      ]
    }
  ]
}